1)(design.css) new leftRed class is added to css (align left and red colored) 2)(welcome.jsp) An exception is fixed   session.getAttribute(..).toString() was giving error   changed to  (String)session.getAttribute(..) 3) (databaseConnections.java) two functions are added to retrieve requests . 4) (editOE.jsp) is implemented 5) (observeOE.jsp) some minor changes on sizes of warnings(made larger).    a security control is added.

--- a/mob-web/web/design.css
+++ b/mob-web/web/design.css
@@ -93,3 +93,9 @@ body{
 .font_normal{
     color: #000080;
 }
+.leftRed{
+    color: red;
+   position: absolute;
+   right:  10%;
+   font-size: 20px;
+}
